[project]
name = "serverless_cold_start"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "lightgbm>=4.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "tensorflow>=2.13.0,<2.22.0 ; python_full_version >= '3.10' and python_full_version < '3.14'",
    "tf-keras>=2.13.0,<2.22.0 ; python_full_version >= '3.10' and python_full_version < '3.14'",
    "torch>=2.2.0",
    "xgboost>=1.7.0",
]
